objects/DemoJam__c.object
<CustomObject>
    <description>csadsadsad</description>
    <fields>
        <fullName>Case_14256__c</fullName>
        <label>Case 14256 Upd</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field_1__c</fullName>
        <label>Field 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>A1</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>B1</label>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_2__c</fullName>
        <label>Field 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Field_1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NewFLSTest__c</fullName>
        <label>NewFLSTest</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_test__c</fullName>
        <label>Profile perfect</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <inlineHelpText>Test this compulsory.</inlineHelpText>
        <label>Test 14256</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DemoJam</label>
    <nameField>
        <label>DemoJam Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DemoJams</pluralLabel>
    <recordTypes>
        <fullName>DemoJam</fullName>
        <active>true</active>
        <description>Recordtype1 for DemoJam object</description>
        <label>DemoJam</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>